_sass/freshbrewed/_base.scss
html, body {
    padding: 0;
    margin: 0;
}

body {
    background-color: $brand-light;
    color: $brand-dark;
    font-family: $base-font-family;
    font-size: $base-font-size;
    font-weight: $base-font-weight;
}

a {
    text-decoration: none;
    color: $brand-primary;
}

p {
    font-family: $serif-font-family;
    @include font-size(18px);
    line-height: 1.55;
}

h1, h2, h3 {
    margin-top: 0;
    font-family: $base-font-family;
    font-weight: 700;
    margin: 2em 0 1em;
}

h1 {
    @include font-size(34px);
    margin-top: 0;
}

h2 {
    @include font-size(24px);
    font-weight: 300;
}

h3 {
    @include font-size(18px);
    text-transform: uppercase;
}

ul {
    @include font-size();
    font-weight: 700;
    padding-left: 1em;
    margin: $spacing-unit 0;
}

li {
    margin: $spacing-unit/2 0;
}

strong {
    font-family: $base-font-family;
    font-weight: 700;
}

blockquote {
    margin: $spacing-unit 0;
    padding: $spacing-unit/2 $spacing-unit*2;
    border: 2px solid $brand-primary;
    background-color: rgba($brand-primary, 0.2);
    border-radius: 6px;
    box-shadow: 0 1.75em 2em -1.5em rgba(0,0,0,0.4);

    p {
        font-family: $base-font-family;
        font-weight: 300;
    }
}

pre {
    background: rgba(#1a1604, 0.9);
    color: #c7c2af;
    padding: $spacing-unit;
    box-shadow: 0 0 4px black inset;
}

